--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,7 +69,7 @@ services:
       - KAFKA_TOPIC_NAME=topic_test
       - KAFKA_SERVER=kafka
       - KAFKA_PORT=29092
-      - TELETOKEN='TOKEN'
+      - TELETOKEN=6878305086:TOKEN
       - MINIO_HOST=minio
       - MINIO_PORT=9000
       - MINIO_USER=minioadmin
