--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,7 +69,7 @@ services:
       - KAFKA_TOPIC_NAME=topic_test
       - KAFKA_SERVER=kafka
       - KAFKA_PORT=29092
-      - TELETOKEN=6878305086:TOKEN
+      - TELETOKEN=6878305086:AAH_rrBGyyUpYiV9WAmUqzLybLEHvll-uoM
       - MINIO_HOST=minio
       - MINIO_PORT=9000
       - MINIO_USER=minioadmin
@@ -108,23 +108,6 @@ services:
       - minio
     networks:
       - broker-kafka
-      
-  # reverse-proxy:
-  #   image: nginx
-  #   volumes:
-  #     - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-  #   ports:
-  #     - mode: host
-  #       protocol: tcp
-  #       published: 80
-  #       target: 80
-  #   depends_on:
-  #     - minio
-  #     - zookeeper
-  #     - kafka
-  #     - kafdrop
-  #     - consumer
-  #     - yolo
 
 networks:
   broker-kafka:
