--- a/services/yoloAPI/Dockerfile
+++ b/services/yoloAPI/Dockerfile
@@ -22,8 +22,12 @@ WORKDIR /publisher
 COPY requirements.txt .
 RUN pip install --upgrade pip && pip install -r requirements.txt
 
+RUN pip install shapely
+
 # Copy source code
 COPY ./app ./app
+
+COPY ./danger_zones ./danger_zones
 
 # Run the application
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
