--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,6 +74,8 @@ services:
       context: ./services/telebot
       dockerfile: Dockerfile
     restart: "always"
+    environment:
+      - TELETOKEN=6878305086:AAH_rrBGyyUpYiV9WAmUqzLybLEHvll-uoM
     volumes:
       - ./services/volume/:/volume
     networks:
@@ -123,6 +125,8 @@ services:
     ports:
       - 8000:8000
     restart: "always"
+    volumes:
+      - ./weights:/weights
     depends_on:
       kafka:
         condition: service_healthy
