--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,7 +87,7 @@ services:
       context: ./services/consumer
       dockerfile: Dockerfile
     environment:
-      - KAFKA_TOPIC_NAME=topic_test
+      - KAFKA_TOPIC_NAME=events
       - KAFKA_SERVER=kafka
       - KAFKA_PORT=29092
       - TELETOKEN=6878305086:AAH_rrBGyyUpYiV9WAmUqzLybLEHvll-uoM
